--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,8 +11,9 @@ security:
         in_memory:
             memory: ~
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_USER:       ROLE_USER
+        ROLE_ADMIN: ROLE_ADMIN
+        ROLE_SUPER_ADMIN: ROLE_SUPER_ADMIN
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
@@ -36,6 +37,7 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/superadmin/, role: ROLE_SUPER_ADMIN }
             # activate different ways to authenticate
 
             # http_basic: ~
